--- a/web/index.html
+++ b/web/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
-  <body class="">
+  <body class="bg-dark-navy">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
